Completed navbar, started hero section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>w3schools.com</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="nav-bar">
-            <a href="#" class="nav-a-left">Tutorials</a>
+            <a href="#" class="nav-a-left" style="margin-left: 80px;">Tutorials</a>
             <a href="#" class="nav-a-left">References</a>
             <a href="#" class="nav-a-left">Exercises</a>
             <a href="#" class="nav-a-left">Certificates</a>
@@ -18,7 +20,73 @@
                 <input type="text" placeholder="Search..." class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+
+            <div class="right-section">
+                <a href="#" class="nav-a-right">Spaces</a>
+                <a href="#" class="nav-a-right">Teachers</a>
+                <a href="#" class="nav-a-right">Upgrade</a>
+                <a href="#" class="nav-a-right">Get Certified</a>
+                <button class="sign-in">Sign In</button>
+            </div>
+        </div>
+
+        <div class="panel">
+            <span class="panel-options">HTML</span>
+            <p class="panel-options">CSS</p>
+            <p class="panel-options">JAVASCRIPT</p>
+            <p class="panel-options">SQL</p>
+            <p class="panel-options">PYTHON</p>
+            <p class="panel-options">JAVA</p>
+            <p class="panel-options">PHP</p>
+            <p class="panel-options">HOW TO</p>
+            <p class="panel-options">W3.CSS</p>
+            <p class="panel-options">C</p>
+            <p class="panel-options">C++</p>
+            <p class="panel-options">C#</p>
+            <p class="panel-options">BOOTSTRAP</p>
+            <p class="panel-options">REACT</p>
+            <p class="panel-options">MYSQL</p>
+            <p class="panel-options">JQUERY</p>
+            <p class="panel-options">EXCEL</p>
+            <p class="panel-options">XML</p>
+            <p class="panel-options">DJANGO</p>
+            <p class="panel-options">NUMPY</p>
+            <p class="panel-options">PANDAS</p>
+            <p class="panel-options">NODEJS</p>
         </div>
     </header>
+
+    <div class="hero-upper">
+        <div class="hero-upper-content">
+            <h1>Learn to code</h1>
+            <h3>With the world's largest web developer site.</h3>
+            <div class="hero-upper-inp">
+                <input type="text" placeholder="Search our tutorials, e.g., HTML">
+                <button><!--<i class="fa-solid fa-magnifying-glass"></i>!--></button>
+            </div>
+            <a href="#">Not Sure Where To Begin?</a>
+        </div>
+    </div>
+
+    <div class="hero-lower">
+        <div class="hero-lower1">
+            <h1>HTML</h1>
+            <p>The language for building web pages</p>
+            <a href="#" class="a1">Learn HTML</a>
+            <a href="#" class="a2">Video Tutorial</a>
+            <a href="#" class="a3">HTML Reference</a>
+            <a href="#" class="a4">Get Certified</a>
+        </div>
+
+        <div class="herolower2"></div>
+    </div>
+
+    <div class="content"></div>
+
+    <div class="content2"></div>
+
+    <footer></footer>
 </body>
+
 </html>
