completed hero section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <input type="text" placeholder="Search our tutorials, e.g., HTML">
                 <button><!--<i class="fa-solid fa-magnifying-glass"></i>!--></button>
             </div>
-            <a href="#">Not Sure Where To Begin?</a>
+            <a href="#" class="hover-link">Not Sure Where To Begin?</a>
         </div>
     </div>
 
@@ -79,7 +79,25 @@
             <a href="#" class="a4">Get Certified</a>
         </div>
 
-        <div class="herolower2"></div>
+        <div class="hero-lower2">
+            <h3>HTML Example:</h3>
+            <div class="html-ex">
+
+                &lt;!DOCTYPE html&gt;<br><br>
+                &lt;html&gt;<br><br>
+                &lt;head&gt;<br><br>
+                &lt;title&gt;HTML Tutorial&lt;/title&gt;<br><br>
+                &lt;/head&gt;<br><br>
+                &lt;body&gt;<br><br>
+
+                &lt;h1This is a heading&lt;/h1&gt;<br><br>
+
+                &lt;/body>&gt;<br><br>
+                &lt;/html&gt;<br><br>
+
+            </div>
+            <button>Try it Yourself</button>
+        </div>
     </div>
 
     <div class="content"></div>
