upper content section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,65 @@
         </div>
     </div>
 
-    <div class="content"></div>
+    <div class="content">
+        <div class="big-cards" style="background-color: #ffc0c7;">
+            <h2>PHP</h2>
+            <h5>A web server programming language</h5>
+            <button>Learn PHP</button>
+        </div>
+
+        <div class="big-cards" style="background-color: #fff4a3;">
+            <h2>jQuery</h2>
+            <h5>A JS library for developing web pages</h5>
+            <button>Learn jQuery</button>
+        </div>
+
+        <div class="big-cards" style="background-color: #f3ecea;">
+            <h2>Java</h2>
+            <h5>A programming language</h5>
+            <button>Learn Java</button>
+        </div>
+
+        <div class="big-cards" style="background-color: #d9eee1;">
+            <h2>C++</h2>
+            <h5>A language</h5>
+            <button>Learn C++</button>
+        </div>
+    </div>
+
+        <div class="slcard-div">
+            <div class="long-cards lcard1">
+                <h2>C</h2>
+            </div>
+            <div class="long-cards lcard2">
+                <h2>C#</h2>
+            </div>
+
+        <div class="small-cards scard1">
+            <h2>R</h2>
+        </div>
+        <div class="small-cards scard2">
+            <h2>Kotlin</h2>
+        </div>
+        <div class="small-cards scard3">
+            <h2>Node.js</h2>
+        </div>
+        <div class="small-cards scard4">
+            <h2>React</h2>
+        </div>
+        <div class="small-cards scard5">
+            <h2>JSON</h2>
+        </div>
+        <div class="small-cards scard6">
+            <h2>Vue</h2>
+        </div>
+        <div class="small-cards scard7">
+            <h2>MySQL</h2>
+        </div>
+        <div class="small-cards scard8">
+            <h2>XML</h2>
+        </div>
+    </div>
 
     <div class="content2"></div>
 
