--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>w3schools.com</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 
 <body>
@@ -63,7 +65,7 @@
             <h3>With the world's largest web developer site.</h3>
             <div class="hero-upper-inp">
                 <input type="text" placeholder="Search our tutorials, e.g., HTML">
-                <button><!--<i class="fa-solid fa-magnifying-glass"></i>!--></button>
+                <button><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
             <a href="#" class="hover-link">Not Sure Where To Begin?</a>
         </div>
@@ -126,13 +128,16 @@
         </div>
     </div>
 
-        <div class="slcard-div">
-            <div class="long-cards lcard1">
-                <h2>C</h2>
-            </div>
-            <div class="long-cards lcard2">
-                <h2>C#</h2>
-            </div>
+    <div class="lcard-div">
+        <div class="long-cards lcard1">
+            <h2>C</h2>
+        </div>
+        <div class="long-cards lcard2">
+            <h2>C#</h2>
+        </div>
+    </div>
+
+    <div class="scard-div">
 
         <div class="small-cards scard1">
             <h2>R</h2>
@@ -160,9 +165,101 @@
         </div>
     </div>
 
-    <div class="content2"></div>
+    <div class="content2">
+        <h1>Web Templates</h1>
+        <h4>Browse our selection of free responsive HTML Templates</h4>
+        <img src="img1.webp" alt="temp img">
+        <button>Browse Templates</button>
+    </div>
 
-    <footer></footer>
+    <footer>
+
+        <div class="foot-panel1">
+            <p>PLUS</p>
+            <p>SPACES</p>
+            <p>GET CERTIFIED</p>
+            <p>FOR TEACHERS</p>
+            <p>FOR BUSINESS</p>
+            <p>CONTACT US</p>
+        </div>
+
+        <div class="foot-panel2">
+            <div class="foot-links">
+                <h5>Top Tutorials</h5>
+                <ul>
+                    <li>HTML Tutorial</li>
+                    <li>CSS Tutorial</li>
+                    <li>JavaScript Tutorial</li>
+                    <li>How To Tutorial</li>
+                    <li>SQL Tutorial</li>
+                    <li>Python Tutorial</li>
+                    <li>W3.CSS Tutorial</li>
+                    <li>Bootstrap Tutorial</li>
+                    <li>PHP Tutorial</li>
+                    <li>Java Tutorial</li>
+                    <li>jQuery Tutorial</li>
+                </ul>
+            </div>
+            <div class="foot-links">
+                <h5>Top Tutorials</h5>
+                <ul>
+                    <li>HTML Tutorial</li>
+                    <li>CSS Tutorial</li>
+                    <li>JavaScript Tutorial</li>
+                    <li>How To Tutorial</li>
+                    <li>SQL Tutorial</li>
+                    <li>Python Tutorial</li>
+                    <li>W3.CSS Tutorial</li>
+                    <li>Bootstrap Tutorial</li>
+                    <li>PHP Tutorial</li>
+                    <li>Java Tutorial</li>
+                    <li>jQuery Tutorial</li>
+                </ul>
+            </div>
+            <div class="foot-links">
+                <h5>Top Tutorials</h5>
+                <ul>
+                    <li>HTML Tutorial</li>
+                    <li>CSS Tutorial</li>
+                    <li>JavaScript Tutorial</li>
+                    <li>How To Tutorial</li>
+                    <li>SQL Tutorial</li>
+                    <li>Python Tutorial</li>
+                    <li>W3.CSS Tutorial</li>
+                    <li>Bootstrap Tutorial</li>
+                    <li>PHP Tutorial</li>
+                    <li>Java Tutorial</li>
+                    <li>jQuery Tutorial</li>
+                </ul>
+            </div>
+            <div class="foot-links">
+                <h5>Top Tutorials</h5>
+                <ul>
+                    <li>HTML Tutorial</li>
+                    <li>CSS Tutorial</li>
+                    <li>JavaScript Tutorial</li>
+                    <li>How To Tutorial</li>
+                    <li>SQL Tutorial</li>
+                    <li>Python Tutorial</li>
+                    <li>W3.CSS Tutorial</li>
+                    <li>Bootstrap Tutorial</li>
+                    <li>PHP Tutorial</li>
+                    <li>Java Tutorial</li>
+                    <li>jQuery Tutorial</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="foot-panel3">
+            W3Schools is optimized for learning and training. Examples might be simplified to improve reading and
+            learning. <br>
+            Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full
+            correctness <br>
+            of all content. While using W3Schools, you agree to have read and accepted our terms of use, cookies and
+            privacy policy.
+        </div>
+
+    </footer>
 </body>
 
 </html>
